--- a/aoc.cabal
+++ b/aoc.cabal
@@ -38,13 +38,17 @@ library
 
   exposed-modules:  
     Day1
-    Day1.Part1
-    Day1.Part2
     Day2
-    Day2.Part1
-    Day2.Part2
     Options
     Run
+
+  other-modules:
+    Day1.Common
+    Day1.Part1
+    Day1.Part2
+    Day2.Common
+    Day2.Part1
+    Day2.Part2
 
   hs-source-dirs: src
 
