--- a/aoc.cabal
+++ b/aoc.cabal
@@ -26,6 +26,7 @@ common shared-depends
     , optparse-generic
     , bytestring
     , directory
+    , containers
 
 common shared-language
   default-language: GHC2021
@@ -48,6 +49,10 @@ library
     Day2.Common
     Day2.Part1
     Day2.Part2
+    Day3
+    Day3.Common
+    Day3.Part1
+    Day3.Part2
     Options
     Run
 
