Finishe day 3 and parameterized benchmarks

--- a/aoc.cabal
+++ b/aoc.cabal
@@ -22,6 +22,7 @@ common shared-ghc-options
 common shared-depends 
   build-depends:    
       base
+    , split
     , aeson
     , optparse-generic
     , bytestring
