--- a/aoc.cabal
+++ b/aoc.cabal
@@ -32,6 +32,7 @@ common shared-depends
     , bytestring
     , directory
     , containers
+    , bytestring-lexing
 
 common shared-language
   default-language: GHC2021
