--- a/aoc.cabal
+++ b/aoc.cabal
@@ -33,11 +33,13 @@ common shared-depends
     , directory
     , containers
     , bytestring-lexing
+    , attoparsec
 
 common shared-language
   default-language: GHC2021
   default-extensions:
    ExplicitNamespaces 
+   GADTs
 
 library
   import:
@@ -59,6 +61,10 @@ library
     Day3.Common
     Day3.Part1
     Day3.Part2
+    Day4
+    Day4.Common
+    Day4.Part1
+    Day4.Part2
     Options
     Run
 
